# Generated by Django 4.2.16 on 2024-11-24 18:34

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):
    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="Component",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "description",
                    models.TextField(
                        blank=True, null=True, verbose_name="Описание работы органа"
                    ),
                ),
                (
                    "setting_designation",
                    models.CharField(
                        max_length=100,
                        unique=True,
                        verbose_name="Обозначение параметра настройки",
                    ),
                ),
            ],
            options={
                "verbose_name": "Орган ДФЗ",
                "verbose_name_plural": "Органы ДФЗ",
            },
        ),
        migrations.CreateModel(
            name="Line",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "dispatch_name",
                    models.CharField(
                        max_length=100,
                        unique=True,
                        verbose_name="Диспетчерское наименование",
                    ),
                ),
                (
                    "current_capacity",
                    models.FloatField(default=2000, verbose_name="ДДТН"),
                ),
            ],
            options={
                "verbose_name": "ЛЭП",
                "verbose_name_plural": "ЛЭП",
            },
        ),
        migrations.CreateModel(
            name="ProtectionDevice",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "device_model",
                    models.CharField(
                        max_length=100, unique=True, verbose_name="Модель устройства"
                    ),
                ),
                (
                    "manufacturer",
                    models.CharField(max_length=100, verbose_name="Производитель"),
                ),
                (
                    "components",
                    models.ManyToManyField(
                        related_name="protection_device", to="core.component"
                    ),
                ),
            ],
            options={
                "verbose_name": "Устройство защиты",
                "verbose_name_plural": "Устройства защиты",
            },
        ),
        migrations.CreateModel(
            name="Substation",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "dispatch_name",
                    models.CharField(
                        max_length=100,
                        unique=True,
                        verbose_name="Диспетчерское наименование",
                    ),
                ),
            ],
            options={
                "verbose_name": "Подстанция",
                "verbose_name_plural": "Подстанции",
            },
        ),
        migrations.CreateModel(
            name="ProtectionHalfSet",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "line",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="protection_half_sets",
                        to="core.line",
                    ),
                ),
                (
                    "protection_device",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="protection_half_sets",
                        to="core.protectiondevice",
                    ),
                ),
                (
                    "substation",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="protection_half_sets",
                        to="core.substation",
                    ),
                ),
            ],
            options={
                "verbose_name": "Полукомплект ДФЗ",
                "verbose_name_plural": "Полукомплекты ДФЗ",
                "unique_together": {("line", "substation")},
            },
        ),
    ]
