# Generated by Django 4.2.16 on 2025-12-17 09:19

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):
    dependencies = [
        ("core", "0011_linebranch_pf_name_line_and_more"),
    ]

    operations = [
        migrations.RenameField(
            model_name="methodologydocument",
            old_name="methodology_url",
            new_name="name_file",
        ),
        migrations.AddField(
            model_name="protectiondevice",
            name="methodology",
            field=models.ForeignKey(
                blank=True,
                help_text="Основная методика расчета для данной модели устройства",
                null=True,
                on_delete=django.db.models.deletion.SET_NULL,
                related_name="protection_devices",
                to="core.methodologydocument",
                verbose_name="Методика расчета для устройства",
            ),
        ),
        migrations.CreateModel(
            name="HalfSetTopology",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "topology_data",
                    models.JSONField(
                        help_text="Список элементов топологии (ЛЭП и АТ) в формате JSON",
                        verbose_name="Данные топологии",
                    ),
                ),
                (
                    "voltage_level",
                    models.DecimalField(
                        blank=True,
                        decimal_places=2,
                        max_digits=7,
                        null=True,
                        verbose_name="Класс напряжения, кВ",
                    ),
                ),
                (
                    "last_updated",
                    models.DateTimeField(
                        auto_now=True, verbose_name="Дата последнего обновления"
                    ),
                ),
                (
                    "topology_hash",
                    models.CharField(
                        blank=True,
                        help_text="MD5 хэш для быстрой проверки изменений",
                        max_length=64,
                        null=True,
                        verbose_name="Хэш топологии",
                    ),
                ),
                (
                    "protection_half_set",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="topology",
                        to="core.protectionhalfset",
                        verbose_name="Полукомплект защиты",
                    ),
                ),
            ],
            options={
                "verbose_name": "Топология полукомплекта",
                "verbose_name_plural": "Топологии полукомплектов",
            },
        ),
    ]
